--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>
       Light Maze
     </title>
+    <script stc="res/lib/three.min.js"></script>
     <script src="res/js/mazegen.js"></script>
+    <script src="res/js/main.js"></script>
   </head>
   <body>
   </body>
