added resize handler

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>
       Light Maze
     </title>
+    <link rel="stylesheet" type="text/css" href="res/css/style.css">
     <script src="res/lib/jquery.min.js"></script>
     <script src="res/lib/three.min.js"></script>
     <script src="res/js/mazegen.js"></script>
