--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="res/css/style.css">
     <script src="res/lib/jquery.min.js"></script>
     <script src="res/lib/three.min.js"></script>
+    <script src="res/lib/PointerLockControls.js"></script>
     <script src="res/js/mazegen.js"></script>
     <script src="res/js/main.js"></script>
   </head>
