--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <title>
       Light Maze
     </title>
-    <script stc="res/lib/three.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="res/css/style.css">
+    <script src="res/lib/jquery.min.js"></script>
+    <script src="res/lib/three.min.js"></script>
+    <script src="res/lib/PointerLockControls.js"></script>
     <script src="res/js/mazegen.js"></script>
     <script src="res/js/main.js"></script>
   </head>
   <body>
+    <div id="game">
+    </div>
   </body>
 </html>
