--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
   <body>
     <div id="game">
     </div>
+    <audio preload loop autoplay volume='0.3'>
+      <source src="res/aud/back.ogg" type="audio/ogg">
+    </audio>
   </body>
 </html>
