--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="res/js/main.js"></script>
   </head>
   <body>
+    <div id="menu">
+	  <img id="play" src="res/img/play.png" onclick="playGame()"></img>
+	  <img id="title" src="res/img/title.png"></img>
+	</div>
     <div id="game">
     </div>
   </body>
