made menu less awful

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <div id="menu">
-	  <img id="play" src="res/img/play.png" onclick="playGame()"></img>
-	  <img id="title" src="res/img/title.png"></img>
-	</div>
+      <h2 id="play" onclick="playGame()">Play</h2>
+      <h1 id="title">Light Maze</h1>
+    </div>
     <div id="game">
     </div>
   </body>
