--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div id="menu">
-      <h2 id="play" onclick="playGame()">Play</h2>
+      <h2 id="play">Click To Play</h2>
       <h1 id="title">Light Maze</h1>
     </div>
     <div id="game">
