--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <h2 id="play">Click To Play</h2>
       <h1 id="title">Dark Passage</h1>
     </div>
+    <div id="endGame">
+      <h2 id="lostMessage">You lost!</h2>
+    </div>
     <div id="game">
     </div>
   </body>
