--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      Light Maze
+      Dark Passage
     </title>
     <link rel="stylesheet" type="text/css" href="res/css/style.css">
     <script src="res/lib/jquery.min.js"></script>
@@ -12,6 +12,13 @@
     <script src="res/js/main.js"></script>
   </head>
   <body>
+    <div id="menu">
+      <h2 id="play">Click To Play</h2>
+      <h1 id="title">Dark Passage</h1>
+    </div>
+    <div id="endGame">
+      <h2 id="lostMessage">You lost!</h2>
+    </div>
     <div id="game">
     </div>
   </body>
